line 59 : issue with lists in panel fixed.

--- a/Demo/advanced_tab_change.html
+++ b/Demo/advanced_tab_change.html
@@ -8,10 +8,10 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<title>mooForms demo | Shaun Freeman</title>
-	<script type="text/javascript" src="./mootools-1.2-core.js"></script>
-	<script type="text/javascript" src="./morphtabs.js"></script>
-	<script type="text/javascript" src="./selectTrans.js"></script>
-	<link href="./morphtabs.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="./js/mootools-1.2-core.js"></script>
+	<script type="text/javascript" src="../Source/morphtabs.js"></script>
+	<script type="text/javascript" src="./js/selectTrans.js"></script>
+	<link href="./css/morphtabs.css" rel="stylesheet" type="text/css" />
 
 	<script>
 
