--- a/Demo/advanced_tab_change.html
+++ b/Demo/advanced_tab_change.html
@@ -4,12 +4,12 @@
 	
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>MorphTabs Demo</title>
+	<title>Fx.Tabs Demo</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<title>mooForms demo | Shaun Freeman</title>
 	<script type="text/javascript" src="./js/mootools-1.2-core.js"></script>
-	<script type="text/javascript" src="../Source/morphtabs.js"></script>
+	<script type="text/javascript" src="../Source/Fx.Tabs.js"></script>
 	<script type="text/javascript" src="./js/selectTrans.js"></script>
 	<link href="./css/morphtabs.css" rel="stylesheet" type="text/css" />
 
@@ -17,18 +17,18 @@
 
 		window.addEvent('domready', function() {
 			
-			var morphTabs = new MorphTabs('morphTabs');
+			var fxTabs = new Fx.Tabs('morphTabs');
 			
-			var selectTransitions = new selectTrans('morphtabs_transitions', morphTabs);
+			var selectTransitions = new selectTrans('morphtabs_transitions', fxTabs);
 			
 			$('morphTabsPrevious').addEvent('click', function(event) {
 				var event = new Event(event).stop();
-				morphTabs.previous();
+				fxTabs.previous();
 			});
 			
 			$('morphTabsNext').addEvent('click', function(event) {
 				var event = new Event(event).stop();
-				morphTabs.previous();
+				fxTabs.previous();
 			});
 		});
 
@@ -96,7 +96,7 @@
 </head>
 <body>
 	<!-- content starts here -->
-	<h1>morphTabs next/previous Demo</h1>
+	<h1>Fx.Tabs next/previous Demo</h1>
 	
 	<div id="morphtabs_transitions">
 		<div id="changeTransition_transition" class="changeTrans"><p>Fx.Transition: </p></div>
