--- a/Demo/events.html
+++ b/Demo/events.html
@@ -4,12 +4,12 @@
 	
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>MorphTabs Events Demo</title>
+	<title>Fx.Tabs Events Demo</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Content-Script-Type" content="text/javascript" />
 	<title>mooForms demo | Shaun Freeman</title>
 	<script type="text/javascript" src="./js/mootools-1.2-core.js"></script>
-	<script type="text/javascript" src="./Source/morphtabs.js"></script>
+	<script type="text/javascript" src="../Source/Fx.Tabs.js"></script>
 	<script type="text/javascript" src="./js/selectTrans.js"></script>
 	<link href="./css/morphtabs.css" rel="stylesheet" type="text/css" />
 
@@ -17,7 +17,7 @@
 
 		window.addEvent('domready', function() {
 			
-			var morphTabs = new MorphTabs('morphTabs', {
+			var fxTabs = new Fx.Tabs('morphTabs', {
 				activateTabFunction: function (tab) {
 					switch (tab) {
 						case 'my_work':
@@ -29,7 +29,7 @@
 				}
 			});
 			
-			var selectTransitions = new selectTrans('morphtabs_transitions', morphTabs);
+			var selectTransitions = new selectTrans('morphtabs_transitions', fxTabs);
 			
 		});
 
@@ -90,7 +90,7 @@
 </head>
 <body>
 	<!-- content starts here -->
-	<h1>morphTabs Events Demo</h1>
+	<h1>Fx.Tabs Events Demo</h1>
 	
 	<div id="morphtabs_transitions">
 		<div id="changeTransition_transition" class="changeTrans"><p>Fx.Transition: </p></div>
