--- a/Demo/basic.html
+++ b/Demo/basic.html
@@ -35,8 +35,8 @@
 	<div id="tabs_transitions">
 		<div id="changeTransition_transition" class="changeTrans"><p>Fx.Transition: </p></div>
 		<div id="changeTransition_duration" class="changeTrans"><p>Fx.Transition duration: </p></div>
-		<div id="startFx" class="changeTrans"><p>StartFx: </p></div>
-		<div id="endFx" class="changeTrans"><p>EndFx: </p></div>
+		<div id="showFx" class="changeTrans"><p>ShowFx: </p></div>
+		<div id="hideFx" class="changeTrans"><p>HideFx: </p></div>
 	</div>
 			
 	<div id="tabs">
