--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
       <span class="small">by <a href="http://github.com/vincentbluff">vincentbluff</a></span></h1>
 
     <div class="description">
-      MooTools Plugin to handle a Tabbed layout
+      MooTools Plugin to handle a Tabbed layout with some nice effects.
     </div>
+    
+    <h2>Demo</h2>
 
     <h2>Authors</h2>
-<p>vincentbluff (shaun@shaunfreeman.co.uk)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Shaun Freeman (shaun@shaunfreeman.co.uk)<br/>      </p>
+	<p>vincentbluff (shaun@shaunfreeman.co.uk)
+	<br/>
+	<br/>      </p>
+	<h2>Contact</h2>
+	<p>Shaun Freeman (shaun@shaunfreeman.co.uk)
+	<br/>      </p>
 
 
     <h2>Download</h2>
