--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="http://github.com/vincentbluff/Fx.Tabs/raw/master/Source/Fx.Tabs.js"></script>
 	<script type="text/javascript" src="../js/selectTrans.js"></script>
 	<link href="../css/styles.css" rel="stylesheet" type="text/css" />
+	<link href="../css/subfolder.css" rel="stylesheet" type="text/css" />
 	<link href="../css/tabs.css" rel="stylesheet" type="text/css" />
 
 	<title>vincentbluff/Fx.Tabs @ GitHub</title>
@@ -26,9 +27,6 @@
 		});
 
 	</script>
-	<style>
-		body { text-align: left; }
-	</style>
 	
 </head>
 
